force-app/main/default/objects/Invoice_Line_Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>store discount details</description>
    <label>Discount</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>