force-app/main/default/objects/Invoice_Line_Item__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>