force-app/main/default/objects/Invoice_Line_Item__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>to store fee details</description>
    <label>Fee</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>