force-app/main/default/objects/Invoice_Line_Item__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &apos;Discount&apos;),Discount__r.Name,
				 IF(ISPICKVAL(Fee__r.Type__c, &apos;Tuition Fee&apos;),
			     Enrollment__r.Class__r.Course__r.Name+&apos; - &apos;+Fee__r.Name+&apos; for &apos;
								+ Period__c,
        Fee__r.Name) 
			)</formula>
    <label>Label</label>
    <type>Text</type>
</CustomField>