force-app/main/default/objects/Invoice_Line_Item__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>to store remarks</description>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>