force-app/main/default/objects/Invoice_Line_Item__c/fields/Subscription_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>to store subscription line item</description>
    <label>Subscription Line Item</label>
    <referenceTo>Subscription_Line_Item__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>