force-app/main/default/objects/Invoice_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>type of invoice line item</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>